--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "workbox-webpack-plugin": "^6.5.4"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.10.5",
     "idb": "^7.1.1",
     "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.13.9",
