--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start-dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
+    "api": "node ./src/api-server/server.js",
     "test": "karma start",
     "lint:fix": "npx eslint ./src --fix",
     "lint": "npx eslint ./src"
@@ -58,9 +59,11 @@
     "workbox-webpack-plugin": "^6.5.4"
   },
   "dependencies": {
+    "@hapi/hapi": "^21.3.2",
     "bootstrap-icons": "^1.10.5",
     "idb": "^7.1.1",
     "lazysizes": "^5.3.2",
+    "nanoid": "^3.3.6",
     "regenerator-runtime": "^0.13.9",
     "workbox-window": "^6.5.4"
   }
